Programme is almost defined

--- a/programme.html
+++ b/programme.html
@@ -86,12 +86,11 @@
         </p>
         <div class="row text-center">
           <div class="col-md-3">
-            <i class="fas fa-video fa-4x fa-fw"></i> <br />Séance Zoom
-            obligatoire
+            <i class="fas fa-video fa-4x fa-fw"></i> <br />Séance Zoom synchrone
           </div>
           <div class="col-md-3">
             <i class="fas fa-question-circle fa-4x fa-fw"></i><br />Permanence
-            Zoom pour questions/support
+            Zoom
           </div>
           <div class="col-md-3">
             <i class="fas fa-user fa-4x fa-fw"></i><br />Activité individuelle
@@ -311,7 +310,6 @@
                 informations abordées par la suite.
               </p>
 
-              <!-- Activité organisation binôme -->
               <!-- Activité #1 -->
               <div class="border border-dark p-3 mb-4">
                 <div class="form-check form-switch h4 mb-3">
@@ -588,12 +586,231 @@
                 la journées vous permettrons de planifier vos tests utilisateur.
               </p>
 
+              <!-- Lecture obligatoires -->
               <h4 class="mb-3">
                 09h00 - 10h30 <i class="fa fa-user"></i>
-                <i class="fa fa-users"></i>
-                <i class="fa fa-question-circle"></i> Travail libre, individuel
-                ou par binômes, avec permanence pour questions
+                <i class="fa fa-question-circle"></i> Lectures obligatoires et
+                travail individuel
               </h4>
+              <p>
+                Cette partie du cours prévoit deux lectures obligatoires. S'il
+                vous reste du temps, vous pouvez l'utiliser pour
+                explorer/avancer sur les livrables individuels.
+              </p>
+
+              <!-- Activité #1 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-1"
+                  />
+                  <label class="form-check-label" for="jeuAct-1"
+                    >Activité #1 <i class="fa fa-user"></i
+                  ></label>
+                </div>
+                <p class="lead">
+                  Lisez le chapitre 24 de Lallemand et Gronier (2017) sur les
+                  échelles UX.
+                </p>
+              </div>
+
+              <!-- Activité #2 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-2"
+                  />
+                  <label class="form-check-label" for="jeuAct-2"
+                    >Activité #2 <i class="fa fa-user"></i
+                  ></label>
+                </div>
+                <p class="lead">
+                  Lisez le chapitre 30 de Lallemand et Gronier (2017) sur les
+                  tests utilisateurs.
+                </p>
+              </div>
+
+              <h4 class="mb-3">
+                11h00 - 12h30 <i class="fa fa-video"></i> Présentation et
+                activités sur les tests utilisateurs
+              </h4>
+              <p>
+                Cette partie du cours introduit la technique du test utilisateur
+                comme élément phare dans l'évaluation UX. Cette technique
+                combine en effet plusieurs mesures de performance et de
+                perception de l'expérience utilisateur
+              </p>
+              <ul>
+                <li>
+                  Slides de support à la présentation
+                  <span class="badge bg-danger">à venir</span>
+                </li>
+              </ul>
+              <!-- Activité #3 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-3"
+                  />
+                  <label class="form-check-label" for="jeuAct-3"
+                    >Activité #3 <i class="fa fa-user"></i>
+                    <span class="badge bg-secondary"
+                      ><i class="fa fa-clock"></i> 5'-10'</span
+                    ></label
+                  >
+                </div>
+                <p class="lead">
+                  Vous allez effectuer un test des 5 seconds sur une maquette
+                  proposée pendant la visioconférence.
+                </p>
+                <ol class="lead">
+                  <li>
+                    Imprimez la fiche du test de 5 seconds qui se trouve dans
+                    les Ressources du jeudi dans l'espace Beekee
+                    <span class="badge bg-warning"
+                      >à effectuer avant la séance</span
+                    >
+                  </li>
+                  <li>
+                    Remplissez la fiche une fois que vous avez été exposé-es à
+                    la maquette pendant 5 secondes.
+                  </li>
+                </ol>
+              </div>
+              <!-- Activité #4 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-4"
+                  />
+                  <label class="form-check-label" for="jeuAct-4"
+                    >Activité #4 <i class="fa fa-users"></i>
+                    <span class="badge bg-secondary"
+                      ><i class="fa fa-clock"></i> 30'-40'</span
+                    ></label
+                  >
+                </div>
+                <p class="lead">
+                  Par groupes, vous allez effectuer un test utilisateur en
+                  qualité de participants. À la fin du test, vous pouvez
+                  partager vos résultats et vos impressions sur cette technique.
+                  Les détails du tests vous seront indiqués pendant la séance
+                  synchrone. Le matériel du test sera ensuite à disposition dans
+                  l'espace Beekee.
+                </p>
+              </div>
+
+              <h4 class="mb-3">
+                14h00 - 15h30 <i class="fa fa-video"></i> Présentation et
+                activités sur échelles UX et test A/B
+              </h4>
+              <p>
+                Cette partie du cours introduit deux autres techniques
+                d'évaluation : les échelles UX et le test A/B. Les deux
+                techniques permettent d'introduire des analyses quantitatives de
+                l'expérience utilisateur.
+              </p>
+              <ul>
+                <li>
+                  Slides de support à la présentation
+                  <span class="badge bg-danger">à venir</span>
+                </li>
+              </ul>
+              <!-- Activité #5 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-5"
+                  />
+                  <label class="form-check-label" for="jeuAct-5"
+                    >Activité #5 <i class="fa fa-users"></i>
+                    <span class="badge bg-secondary"
+                      ><i class="fa fa-clock"></i> 20'-30'</span
+                    ></label
+                  >
+                </div>
+                <p class="lead">
+                  En relation avec la maquette interactive du test utilisateur
+                  du matin et en utilisant les Ressources du jeudi dans l'espace
+                  Beekee :
+                </p>
+                <ol class="lead">
+                  <li>
+                    Téléchargez et remplissez (papier ou avec logiciel
+                    d'annotation PDF) le fichier Questionnaire UEQ
+                  </li>
+                  <li>
+                    Ouvrez le lien Fichier excel données de l'échelle UEQ qui
+                    pointe à un fichier excel (utilisez le login UNIGE pour y
+                    accéder). Dans le tab Data du fichier, trouvez une ligne
+                    dans les items qui n'est pas éditée par l'un de vos
+                    collègues et insérez votre évaluation de l'échelle UEQ.
+                  </li>
+                </ol>
+              </div>
+              <!-- Activité #6 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="jeuAct-6"
+                  />
+                  <label class="form-check-label" for="jeuAct-6"
+                    >Activité #6 <i class="fa fa-user"></i>
+                    <span class="badge bg-secondary"
+                      ><i class="fa fa-clock"></i> 20'-30'</span
+                    ></label
+                  >
+                </div>
+                <p class="lead">
+                  Vous allez effectuer une analyse statistique de type A/B test,
+                  avec des ressources disponibles dans l'espace Beekee du jeudi
+                  :
+                </p>
+                <ol class="lead">
+                  <li>
+                    Téléchargez et lisez le rapport sur un test A/B fictif sur
+                    le temps de fixation d'une image sur le site du MALTT
+                  </li>
+                  <li>
+                    Téléchargez les données qui accompagnent le rapport (fichier
+                    .csv)
+                  </li>
+                  <li>Ouvrez les donnez avec le logiciel Jamovi</li>
+                  <li>
+                    Sur la base des informations contenues dans le rapport,
+                    essayez de répliquer exactement les mêmes résultats et un
+                    graphique similaire
+                  </li>
+                  <li>
+                    Postez une capture d'écran de vos résultats en Jamovi dans
+                    <span class="badge" style="background-color: #b754cf"
+                      ><i class="fas fa-tag"></i> Jeudi</span
+                    >.
+                  </li>
+                </ol>
+              </div>
+              <h4 class="mb-3">
+                16h00 - 17h00 <i class="fa fa-video"></i> Présentation des
+                livrables
+              </h4>
+              <p class="lead">
+                Illustration des consignes, contraintes et délais
+                <a href="./livrables.html">des livrables</a> prévus pour le
+                cours.
+              </p>
+              <!-- Fin de jeudi -->
             </div>
           </div>
         </div>
