Added publication elevator pitch

--- a/programme.html
+++ b/programme.html
@@ -164,7 +164,13 @@
                   entamé en ERGO I, préparez un <em>elevator pitch</em> d'une
                   durée de
                   <span class="badge bg-secondary">1'</span>
-                  maximum pour illustrer votre projet à vos collègues.
+                  maximum pour illustrer votre projet à vos collègues. Si vous
+                  le souhaitez, vous pouvez publier une image dans l'espace
+                  Beekee, dans
+                  <span class="badge" style="background-color: #ff5e62"
+                    ><i class="fas fa-tag"></i> Elevator pitch</span
+                  >
+                  des discussions du Lundi.
                 </p>
               </div>
 
