--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex, nofollow" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -92,7 +93,7 @@
       <div class="container">
         <!-- Link to main pages -->
         <section>
-          <h2 class="display-4">Informations principales</h2>
+          <h2 class="display-5">Informations principales</h2>
           <div class="row mt-4">
             <!-- Objectifs -->
             <div class="col-lg-3">
@@ -107,7 +108,9 @@
                     compétences à développer pendant le cours.
                   </p>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-outline-danger btn-lg"
+                    <a
+                      href="./objectifs.html"
+                      class="btn btn-outline-danger btn-lg"
                       ><i class="fa fa-chevron-circle-right"></i> Objectifs</a
                     >
                   </div>
@@ -128,7 +131,9 @@
                     mercredi et jeudi de la semaine de cours intensive.
                   </p>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-outline-danger btn-lg"
+                    <a
+                      href="./programme.html"
+                      class="btn btn-outline-danger btn-lg"
                       ><i class="fa fa-chevron-circle-right"></i> Programme</a
                     >
                   </div>
@@ -149,7 +154,9 @@
                     pendant la période de travail à distance.
                   </p>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-outline-danger btn-lg"
+                    <a
+                      href="./livrables.html"
+                      class="btn btn-outline-danger btn-lg"
                       ><i class="fa fa-chevron-circle-right"></i> Livrables</a
                     >
                   </div>
@@ -166,11 +173,13 @@
                     <i class="far fa-life-ring"></i>
                   </p>
                   <p class="card-text lead">
-                    Accedez aux modalités de support et aux ressources pour vous
+                    Accédez aux modalités de support et aux ressources pour vous
                     accompagner pendant le cours.
                   </p>
                   <div class="d-grid">
-                    <a href="#" class="btn btn-outline-danger btn-lg"
+                    <a
+                      href="./support.html"
+                      class="btn btn-outline-danger btn-lg"
                       ><i class="fa fa-chevron-circle-right"></i> Support</a
                     >
                   </div>
@@ -186,7 +195,7 @@
     <!-- Équipe enseignante -->
     <div class="container">
       <section>
-        <h2 class="display-4 mt-3">Équipe enseignante</h2>
+        <h2 class="display-5 mt-3">Équipe enseignante</h2>
         <div class="row mt-4">
           <!-- MAF -->
           <div class="col-lg-6">
@@ -206,7 +215,7 @@
                     <ul class="list-inline">
                       <li class="list-inline-item">
                         <a
-                          href="http://tecfa.unige.ch/perso/mafritz/#/"
+                          href="https://tecfa.unige.ch/perso/mafritz/#/"
                           class="link-dark"
                         >
                           <i class="fa fa-link fa-2x fa-fw"></i>
@@ -257,7 +266,7 @@
                     <ul class="list-inline">
                       <li class="list-inline-item">
                         <a
-                          href="http://tecfa.unige.ch/perso/estupinan/"
+                          href="https://tecfa.unige.ch/perso/estupinan/"
                           class="link-dark"
                         >
                           <i class="fa fa-link fa-2x fa-fw"></i>
