--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               <a class="nav-link" href="./livrables.html">Livrables</a>
             </li>
             <li class="nav-item me-2">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item me-2">
               <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
