--- a/objectifs.html
+++ b/objectifs.html
@@ -55,6 +55,9 @@
               <a class="nav-link" href="./livrables.html">Livrables</a>
             </li>
             <li class="nav-item me-2">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item me-2">
               <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
@@ -76,11 +79,11 @@
         le cours ERGO I.
       </p>
 
-      <p>
+      <p class="lead">
         À la fin du cours, vous aurez acquis les connaissances et compétences
         suivantes :
       </p>
-      <ul>
+      <ul class="lead">
         <li>
           Connaître les différentes étapes dans la gestion d'un projet UX ;
         </li>
@@ -137,6 +140,12 @@
                   fictif qui compare deux versions d'une interface web
                 </li>
               </ul>
+              <p>
+                <a href="./portfolio.html" class="btn btn-lg btn-outline-danger"
+                  ><i class="fa fa-chevron-circle-right"></i> Voir le portfolio
+                  des productions finales</a
+                >
+              </p>
             </div>
             <!-- Icône -->
             <div class="col-lg-4 text-center">
