--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Support | ERGO II 2020/2021</title>
+    <title>Productions des étudiant-es | ERGO II 2020/2021</title>
   </head>
   <body>
     <nav
@@ -50,15 +50,15 @@
               <a class="nav-link" href="./livrables.html">Livrables</a>
             </li>
             <li class="nav-item me-2">
-              <a class="nav-link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item me-2">
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="./support.html"
-                >Support</a
+                href="./portfolio.html"
+                >Portfolio</a
               >
+            </li>
+            <li class="nav-item me-2">
+              <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
               <a href="#" class="nav-link">
@@ -70,8 +70,11 @@
       </div>
     </nav>
     <div class="container mt-4">
-      <h1 class="display-3">Support</h1>
-      <p class="lead">Liste de ressources utiles pour le cours.</p>
+      <h1 class="display-3">Portfolio des étudiant-es</h1>
+      <p class="lead">
+        Les étudiant-es qui le souhaitent peuvent demander que leurs productions
+        soient publiées à cet endroit.
+      </p>
 
       <div class="text-center display-4">
         <i class="fas fa-hard-hat fa fa-5x"></i><br />
