--- a/livrables.html
+++ b/livrables.html
@@ -55,6 +55,9 @@
               >
             </li>
             <li class="nav-item me-2">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item me-2">
               <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
