--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
               <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
-              <a href="#" class="nav-link">
-                <i class="bi bi-github"></i>
+              <a
+                href="https://github.com/mafritz/ergo-ii-2021"
+                class="nav-link"
+              >
+                <i class="fa fa-github"></i>
               </a>
             </li>
           </ul>
@@ -167,23 +170,23 @@
               </div>
             </div>
 
-            <!-- Support -->
+            <!-- Portfolio -->
             <div class="col-lg-3">
               <div class="card shadow-sm text-center">
-                <div class="card-header fw-bold">Aide ?</div>
+                <div class="card-header fw-bold">Résultat ?</div>
                 <div class="card-body">
                   <p class="text-center display-1">
-                    <i class="far fa-life-ring"></i>
+                    <i class="fas fa-award"></i>
                   </p>
                   <p class="card-text lead">
-                    Accédez aux modalités de support et aux ressources pour vous
-                    accompagner pendant le cours.
+                    Accédez au protfolio avec les productions effectuées par les
+                    étudiant-es pendant cette session du cours.
                   </p>
                   <div class="d-grid">
                     <a
-                      href="./support.html"
+                      href="./portfolio.html"
                       class="btn btn-outline-danger btn-lg"
-                      ><i class="fa fa-chevron-circle-right"></i> Support</a
+                      ><i class="fa fa-chevron-circle-right"></i> Portfolio</a
                     >
                   </div>
                 </div>
