--- a/objectifs.html
+++ b/objectifs.html
@@ -61,8 +61,11 @@
               <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item me-0">
-              <a href="#" class="nav-link">
-                <i class="bi bi-github"></i>
+              <a
+                href="https://github.com/mafritz/ergo-ii-2021"
+                class="nav-link"
+              >
+                <i class="fa fa-github"></i>
               </a>
             </li>
           </ul>
