--- a/support.html
+++ b/support.html
@@ -61,8 +61,11 @@
               >
             </li>
             <li class="nav-item me-0">
-              <a href="#" class="nav-link">
-                <i class="bi bi-github"></i>
+              <a
+                href="https://github.com/mafritz/ergo-ii-2021"
+                class="nav-link"
+              >
+                <i class="fa fa-github"></i>
               </a>
             </li>
           </ul>
@@ -73,10 +76,14 @@
       <h1 class="display-3">Support</h1>
       <p class="lead">Liste de ressources utiles pour le cours.</p>
 
-      <div class="text-center display-4">
-        <i class="fas fa-hard-hat fa fa-5x"></i><br />
-        En construction
-      </div>
+      <!-- Logiciels de prototypage -->
+      <h2 class="display-5">Logiciels de prototypage</h2>
+      <dl class="row">
+        <dt class="col-sm-4"><a href="https://www.figma.com/">Figma</a></dt>
+        <dd class="col-sm-8">
+          Logiciel de prototypage disponible directement dans le navigateur.
+        </dd>
+      </dl>
     </div>
 
     <footer class="bg-dark text-white mt-5 mb-0 py-5">
