--- a/programme.html
+++ b/programme.html
@@ -75,7 +75,7 @@
     <div class="container mt-4">
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
-        Page en cours de finalisation
+        Le programme peut changer. Dernière mise à jour 20.02.2021 à 09:00
       </p>
       <h1 class="display-3">Programme du cours ERGO II</h1>
       <p class="lead mt-3">
