Added last update to assignments

--- a/livrables.html
+++ b/livrables.html
@@ -75,8 +75,8 @@
     <div class="container mt-4">
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
-        Le contenu de cette page est encore provisoire et seulement indicatif
-        pour le moment
+        Le contenu de cette page est encore provisoire. Dernière mise à jour
+        20.02.2021 à 09:00
       </p>
       <h1 class="display-3">Livrables</h1>
       <p class="lead mt-3">
