--- a/support.html
+++ b/support.html
@@ -78,12 +78,7 @@
 
       <!-- Logiciels de prototypage -->
       <h2 class="display-5">Logiciels de prototypage</h2>
-      <dl class="row">
-        <dt class="col-sm-4"><a href="https://www.figma.com/">Figma</a></dt>
-        <dd class="col-sm-8">
-          Logiciel de prototypage disponible directement dans le navigateur.
-        </dd>
-      </dl>
+      <p class="lead">À faire</p>
     </div>
 
     <footer class="bg-dark text-white mt-5 mb-0 py-5">
