Main page title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
 
-    <title>ERGO II 2020/2021 - Site de pilotage du cours</title>
+    <title>ERGO II 2020/2021 - Site du cours</title>
   </head>
   <body>
     <nav
