--- a/programme.html
+++ b/programme.html
@@ -138,10 +138,8 @@
               </p>
 
               <h4>14h00 - 15h00 Visioconférence <i class="fa fa-video"></i></h4>
-              <p class="lead">
-                Cette partie du cours aborde les points suivants :
-              </p>
-              <ul class="lead mb-4">
+              <p>Cette partie du cours aborde les points suivants :</p>
+              <ul>
                 <li>Présentation du cours et de l'équipe enseignante</li>
                 <li>Présentation des environnements de travail</li>
                 <li>
@@ -197,9 +195,9 @@
                   >
                 </div>
                 <p class="lead">
-                  Regardez la vidéo et/ou les slides de présentation générale du
-                  domaine UX/UI pour remobiliser les principes de ERGO I et vous
-                  préparez à la suite de la semaine.
+                  Avant le cours de mardi, regardez la vidéo et/ou les slides de
+                  présentation générale du domaine UX/UI pour remobiliser les
+                  principes de ERGO I et vous préparez à la suite de la semaine.
                 </p>
                 <ul class="lead">
                   <li>
