Video not ready yet

--- a/programme.html
+++ b/programme.html
@@ -201,8 +201,8 @@
                 </p>
                 <ul class="lead">
                   <li>
-                    Le lien à la vidéo se trouve dans l'espace
-                    <i class="fa fa-moodle"></i> du cours
+                    Le lien à la vidéo se trouve dans l'espace du cours
+                    <span class="badge bg-danger">à venir</span>
                   </li>
                   <li>
                     <a href="https://mafritz.ch/slides/fr/ux-ui-web/#/"
