--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <i class="fas fa-award"></i>
                   </p>
                   <p class="card-text lead">
-                    Accédez au protfolio avec les productions effectuées par les
+                    Accédez au portfolio avec les productions effectuées par les
                     étudiant-es pendant cette session du cours.
                   </p>
                   <div class="d-grid">
