--- a/objectifs.html
+++ b/objectifs.html
@@ -78,8 +78,8 @@
         Le cours permet de mettre en pratique des principes et techniques liés à
         l'<abbr title="User Experience">UX</abbr>, terme anglais pour designer
         l'expérience utilisateur, dans la conception et évaluation d'interfaces
-        web. Il applique les connaissances théoriques et techniques abordés dans
-        le cours ERGO I.
+        web. Il applique les connaissances théoriques et techniques abordées
+        dans le cours ERGO I.
       </p>
 
       <p class="lead">
