--- a/programme.html
+++ b/programme.html
@@ -362,7 +362,7 @@
                 activités sur le prototypage papier et low-fi
               </h4>
               <p>
-                Cette partie du cours est consacré aux prototypage
+                Cette partie du cours est consacrée aux prototypage
                 <em>low-fidelity</em>, dont les objectifs concernent la création
                 de la structure du dispositif et la définition des éléments les
                 plus importants.
@@ -444,7 +444,7 @@
                 activités sur le prototypage high-fi et maquettes interactives
               </h4>
               <p>
-                Cette partie du cours est consacré au prototypage
+                Cette partie du cours est consacrée au prototypage
                 <em>high-fidelity</em> et aux maquettes interactives, dont les
                 objectifs concernent la création d'un expérience visuelle et/ou
                 fonctionnelle le plus proche possible du produit final.
@@ -486,7 +486,7 @@
                 <p class="alert alert-warning">
                   <strong>Attention</strong> : utilisez l'onglet
                   <em>Discussions</em> et non pas <em>Ressources</em>. Nous
-                  ferons par la suite un trie des principes et mettrons dans les
+                  ferons par la suite un tri des principes et mettrons dans les
                   ressources seulement une sélection de ce que vous trouvez.
                 </p>
               </div>
@@ -690,7 +690,7 @@
                   </li>
                   <li>
                     Remplissez la fiche une fois que vous avez été exposé-es à
-                    la maquette pendant 5 secondes.
+                    la maquette pendant 5 seconds.
                   </li>
                 </ol>
               </div>
