--- a/livrables.html
+++ b/livrables.html
@@ -245,7 +245,7 @@
             Une mise en situation basée sur l'activité <em>persona</em> de ERGO
             I
           </li>
-          <li>Un test de 5 secondes</li>
+          <li>Un test de 5 seconds</li>
           <li>
             La description de 4 ou 5 tâches cohérentes avec les finalités de
             votre projet et la mise en situation à partager avec les
