--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
 
     <title>ERGO II 2020/2021 - Site du cours</title>
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg" />
   </head>
   <body>
     <nav
