--- a/livrables.html
+++ b/livrables.html
@@ -15,6 +15,7 @@
     />
 
     <title>Livrables | ERGO II 2020/2021</title>
+    <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg" />
   </head>
   <body>
     <nav
