--- a/livrables.html
+++ b/livrables.html
@@ -205,7 +205,7 @@
         >
       </p>
 
-      <!-- Première version de la maquette -->
+      <!-- Première version de la maquette et scénario -->
       <section class="border border-dark p-3 mb-4">
         <h3>
           #1 <i class="fa fa-users"></i> Première version de la maquette
@@ -298,7 +298,7 @@
           suivantes :
         </p>
         <ul>
-          <li>Durée entre 15 et 25 minutes maximum</li>
+          <li>Planifier une durée du test entre 15 et 20 minutes maximum</li>
           <li>
             Vos passations doivent être enregistrées audio/vidéo. Pensez à
             informer les utilisateurs lorsque vous prenez RDV avec eux pour
@@ -487,8 +487,8 @@
         <h3>#3 <i class="fa fa-user"></i> Version finale prototype mobile</h3>
         <p class="lead">
           Suite aux feedbacks de l'équipe enseignante et de vos collègues,
-          modifiez la première version du prototype mobile et republier le lien
-          vers l'enregistrement vidéo.
+          modifiez la première version du prototype mobile et publier une
+          nouvelle vidéo avec la manipulation.
         </p>
       </section>
 
@@ -500,16 +500,93 @@
         </h3>
         <p class="lead">
           Le rapport individuel présente les résultats des passations que chaque
-          personne a effectué de manière indépendante. Même si des parties du
-          rapport sont communes, à ce stade vous devez rédigez chacun pour son
+          personne a effectuées de manière indépendante. Même si des parties du
+          rapport sont communes, à ce stade vous devez rédiger chacun pour son
           compte.
         </p>
         <h4>Consignes</h4>
+        <p>
+          Rédigez un rapport qui illustre les tests utilisateurs que vous avez
+          effectués individuellement. Le rapport doit suivre les indications et
+          la structure du template fourni.
+        </p>
+        <p>
+          <a
+            href="./assets/docs/rapport-individuel-test-utilisateur.pdf"
+            class="btn btn-outline-danger"
+            ><i class="fa fa-download"></i> Template du rapport individuel</a
+          >
+        </p>
 
         <h4>Contraintes</h4>
+        <p>Votre rapport doit respecter ces contraintes :</p>
+        <ul>
+          <li>
+            Dans la section
+            <strong>Analyse détaillée des problèmes majeurs</strong>, limitez
+            votre analyse à <strong>2 ou 3 problèmes maximum</strong> que vous
+            jugez les plus critiques. Vous n'êtes pas forcé-es à choisir les
+            mêmes problèmes de votre collègue. Au contraire, il serait mieux que
+            vous vous ne consultez pas sur cet aspect de manière à effectuer
+            deux analyses séparées et pouvoir par la suite les mettre en commun
+            pour le rapport final.
+          </li>
+          <li>
+            Au moins l'un problème analysés doit être accompagné par un extrait
+            vidéo de la passation d'un utilisateur d'une durée maximum de 60
+            seconds. Mettez le lien vers la vidéo dans le texte.
+          </li>
+          <li>
+            Votre rapport ne doit pas dépasser les <strong>6'000 mots</strong>.
+            Ne comptez pas dans le calcul la page de garde, la bibliographie,
+            les annexes et la partie autoscopique.
+          </li>
+          <li>
+            Votre rapport doit présenter une page de garde qui indique
+            clairement votre nom, la date de rédaction et l'intitulé du
+            document. Évitez d'intituler votre document
+            <strong><del>Rapport individuel</del></strong> et trouvez plutôt un
+            titre intéressant pour un commanditaire.
+          </li>
+          <li>
+            Vos titres de sections et vos pages doivent être numérotés. Évitez
+            les entêtes ou pieds de page sur toutes les pages.
+          </li>
+          <li>
+            Vos figures et tableaux doivent être numérotés et avec une légende.
+            Cette contrainte ne s'applique pas aux annexes.
+          </li>
+          <li>
+            Vous pouvez créer directement des liens dans le texte, mais ajoutez
+            également une note en bas de page à la fin du lien dans laquelle
+            vous mettez l'URL <em>in extensio</em>.
+          </li>
+          <li>
+            Citez correctement dans le texte et dans la section
+            références/bibliographie les ressources. Utilisez les normes
+            adoptées dans votre domaine académique ou professionnel (e.g. APA
+            pour étudiant-es MALTT).
+          </li>
+        </ul>
 
         <h4>Conseils</h4>
-        <p></p>
+        <p>Quelques conseils pour rendre un bon travail :</p>
+        <ul>
+          <li>
+            Imaginez qu'il s'agit d'un document que vous partagez avec des
+            clients ou d'autres professionnels du UX.
+          </li>
+          <li>
+            Insérez dans le texte des éléments graphiques (e.g. captures
+            d'écran) seulement s'ils apportent vraiment de la valeur, si non
+            placez-les en annexe.
+          </li>
+          <li>
+            Vous aurez le droit de maintenir des parties de vos rapports
+            individuels respectifs dans le rapport final commun. Vous avez donc
+            un double intérêt à produire un bon rapport.
+          </li>
+        </ul>
       </section>
 
       <!-- Proposition test A/B-->
