--- a/livrables.html
+++ b/livrables.html
@@ -98,10 +98,10 @@
           </h2>
           <!-- Tableau récapitulatif -->
           <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped align-middle">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
+                  <th scope="col" class="text-center">#</th>
                   <th scope="col">Date</th>
                   <th scope="col" class="text-center">Horaire</th>
                   <th scope="col" class="text-center">Type</th>
@@ -112,7 +112,13 @@
               <tbody>
                 <!-- V1 + Scénario -->
                 <tr>
-                  <th scope="row">1</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-maquette-scenario"
+                      class="btn btn-outline-danger btn-sm"
+                      >1 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Jeudi 4 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-users"></i></td>
@@ -124,7 +130,13 @@
                 </tr>
                 <!-- Première version prototype mobile -->
                 <tr>
-                  <th scope="row">2</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-premier-prototype-mobile"
+                      class="btn btn-outline-danger btn-sm"
+                      >2 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Mardi 9 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-user"></i></td>
@@ -133,7 +145,13 @@
                 </tr>
                 <!-- Prototype mobile -->
                 <tr>
-                  <th scope="row">3</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-prototype-mobile"
+                      class="btn btn-outline-danger btn-sm"
+                      >3 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Dimanche 14 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-user"></i></td>
@@ -142,7 +160,13 @@
                 </tr>
                 <!-- Rapport test individuel -->
                 <tr>
-                  <th scope="row">4</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-rapport-individuel"
+                      class="btn btn-outline-danger btn-sm"
+                      >4 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Mardi 16 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-user"></i></td>
@@ -154,7 +178,13 @@
                 </tr>
                 <!-- Proposition test A/B -->
                 <tr>
-                  <th scope="row">5</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-proposition-ab"
+                      class="btn btn-outline-danger btn-sm"
+                      >5 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Jeudi 18 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-user"></i></td>
@@ -166,7 +196,13 @@
                 </tr>
                 <!-- Rapport test A/B -->
                 <tr>
-                  <th scope="row">6</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-rapport-ab"
+                      class="btn btn-outline-danger btn-sm"
+                      >6 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Jeudi 25 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-user"></i></td>
@@ -175,7 +211,13 @@
                 </tr>
                 <!-- Rapport final -->
                 <tr>
-                  <th scope="row">7</th>
+                  <th scope="row">
+                    <a
+                      href="#livrable-rapport-final"
+                      class="btn btn-outline-danger btn-sm"
+                      >7 <i class="fa fa-chevron-circle-down"></i
+                    ></a>
+                  </th>
                   <td>Dimanche 28 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-users"></i></td>
@@ -206,7 +248,10 @@
       </p>
 
       <!-- Première version de la maquette et scénario -->
-      <section class="border border-dark p-3 mb-4">
+      <section
+        class="border border-dark p-5 mb-5"
+        id="livrable-maquette-scenario"
+      >
         <h3>
           #1 <i class="fa fa-users"></i> Première version de la maquette
           interactive et scénario test utilisateur
@@ -376,7 +421,10 @@
       </section>
 
       <!-- Première version mobile -->
-      <section class="border border-dark p-3 mb-4">
+      <section
+        class="border border-dark p-5 mb-5"
+        id="livrable-premier-prototype-mobile"
+      >
         <h3>
           #2 <i class="fa fa-user"></i> Première version du prototype mobile
         </h3>
@@ -483,7 +531,10 @@
       </section>
 
       <!-- Prototype mobile -->
-      <section class="border border-dark p-3 mb-4">
+      <section
+        class="border border-dark p-5 mb-5"
+        id="livrable-prototype-mobile"
+      >
         <h3>#3 <i class="fa fa-user"></i> Version finale prototype mobile</h3>
         <p class="lead">
           Suite aux feedbacks de l'équipe enseignante et de vos collègues,
@@ -493,7 +544,10 @@
       </section>
 
       <!-- Rapport individuel -->
-      <section class="border border-dark p-3 mb-4">
+      <section
+        class="border border-dark p-5 mb-5"
+        id="livrable-rapport-individuel"
+      >
         <h3>
           #4 <i class="fa fa-user"></i> Rapport du test utilisateur sur la
           première version de la maquette
@@ -590,7 +644,7 @@
       </section>
 
       <!-- Proposition test A/B-->
-      <section class="border border-dark p-3 mb-4">
+      <section class="border border-dark p-5 mb-5" id="livrable-proposition-ab">
         <h3>
           #5 <i class="fa fa-user"></i> Proposition d'un test A/B fictif pour
           obtenir un jeu de données
@@ -646,7 +700,7 @@
       </section>
 
       <!-- Rapport test A/B fictif -->
-      <section class="border border-dark p-3 mb-4">
+      <section class="border border-dark p-5 mb-5" id="livrable-rapport-ab">
         <h3>#6 <i class="fa fa-user"></i> Rapport test A/B fictif</h3>
         <h4>Consignes</h4>
 
@@ -656,7 +710,7 @@
       </section>
 
       <!-- Rapport final -->
-      <section class="border border-dark p-3 mb-4">
+      <section class="border border-dark p-5 mb-5" id="livrable-rapport-final">
         <h3>
           #7 <i class="fa fa-user"></i> Deuxième version de la maquette et
           rapport final
