--- a/livrables.html
+++ b/livrables.html
@@ -541,6 +541,27 @@
           modifiez la première version du prototype mobile et publier une
           nouvelle vidéo avec la manipulation.
         </p>
+        <h4>Consignes</h4>
+        <p>
+          Même consignes de la première version. Souvenez-vous de maintenir la
+          vidéo à la première version pour qu'on puisse comparer.
+        </p>
+        <h4>Contraintes</h4>
+        <p>Mêmes contraintes de la première version.</p>
+        <h4>Conseils</h4>
+        <p><strong>Optionnel</strong> :</p>
+        <ul>
+          <li>
+            Si vous pensez montrer la vidéo dans votre portfolio personnel, vous
+            pouvez éventuellement produire une page HTML5 avec la vidéo et
+            quelques informations complémentaires.
+          </li>
+          <li>
+            Si vous avez créé une maquette interactive et le logiciel de
+            prototypage le permet, vous pouvez l'ajouter dans la page pour que
+            les utilisateurs puissent tester directement.
+          </li>
+        </ul>
       </section>
 
       <!-- Rapport individuel -->
@@ -702,11 +723,66 @@
       <!-- Rapport test A/B fictif -->
       <section class="border border-dark p-5 mb-5" id="livrable-rapport-ab">
         <h3>#6 <i class="fa fa-user"></i> Rapport test A/B fictif</h3>
+        <p class="lead">
+          Ce livrable vous permet de formaliser les résultats du test A/B
+          effectué avec les données fictives dans un rapport, dans lequel vous
+          formulez un avis d'intervention sur la base de ce même résultat.
+        </p>
         <h4>Consignes</h4>
+        <p>
+          Rédigez un rapport similaire aux deux exemples vus pendant le cours et
+          que vous retrouvez également ici.
+        </p>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a
+              href="./assets/docs/test-ab-fixation-time.pdf"
+              class="btn btn-outline-danger"
+            >
+              <i class="fa fa-download"></i> Rapport test A/B sur le temps de
+              fixation
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a
+              href="./assets/docs/test-ab-subscribtion-click.pdf"
+              class="btn btn-outline-danger"
+            >
+              <i class="fa fa-download"></i> Rapport test A/B sur la fréquence
+              de clics sur un bouton
+            </a>
+          </li>
+        </ul>
 
         <h4>Contraintes</h4>
+        <p>Le rapport doit respecter les contraintes suivantes :</p>
+        <ul>
+          <li>Longueur de 2 à 4 pages maximum.</li>
+          <li>
+            Les deux versions doivent figurer clairement, mais vous ne devez pas
+            forcément afficher toute la page du site ou l'interface de
+            l'application.
+          </li>
+          <li>
+            Le test statistique effectué ainsi que les résultats obtenus doivent
+            figurer de manière claire et avec les indices adéquats.
+          </li>
+        </ul>
 
         <h4>Conseils</h4>
+        <p>Quelques conseils pour rendre un bon rapport :</p>
+        <ul>
+          <li>
+            Ne vous focalisez pas exclusivement sur la p-valeur. Regardez la
+            différence entre les deux versions et évaluez si cette différence
+            peut vraiment avoir des conséquences pratiques importantes.
+          </li>
+          <li>
+            Le rapport est moins formalisé des rapports individuels et final,
+            mais essayez néanmoins de rédiger un document qu'on puisse imaginer
+            de partager avec des clients.
+          </li>
+        </ul>
       </section>
 
       <!-- Rapport final -->
