--- a/programme.html
+++ b/programme.html
@@ -76,7 +76,7 @@
     <div class="container mt-4">
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
-        Le programme peut changer. Dernière mise à jour 20.02.2021 à 09:00
+        Le programme peut changer. Dernière mise à jour 22.02.2021 à 11:30
       </p>
       <h1 class="display-3">Programme du cours ERGO II</h1>
       <p class="lead mt-3">
@@ -202,7 +202,7 @@
                 </p>
                 <ul class="lead">
                   <li>
-                    Le lien à la vidéo se trouve dans l'espace du cours
+                    Le lien à la vidéo se trouve dans l'espace Beekee du cours
                     <span class="badge bg-danger">à venir</span>
                   </li>
                   <li>
@@ -254,6 +254,34 @@
                 détails seront communiqués directement pendant la
                 visioconférence.
               </p>
+
+              <!-- Activité mardi -->
+              <!-- Activité #1 -->
+              <div class="border border-dark p-3 mb-4">
+                <div class="form-check form-switch h4 mb-3">
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    id="marAct-1"
+                  />
+                  <label class="form-check-label" for="marAct-1"
+                    >Activité #1 <i class="fa fa-user"></i>
+                    <span class="badge bg-secondary"
+                      ><i class="fa fa-clock"></i> 5' - 10'</span
+                    ></label
+                  >
+                  <span class="badge bg-warning">À faire avant la séance</span>
+                </div>
+                <p class="lead">
+                  Nous allons utiliser un <em>board</em> interactif pendant
+                  l'aprés-midi. Merci de créer un compte avant la séance
+                </p>
+                <ul class="lead">
+                  <li>
+                    <a href="https://miro.com/">Lien vers l'application miro</a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
