--- a/programme.html
+++ b/programme.html
@@ -685,8 +685,10 @@
               </p>
               <ul>
                 <li>
-                  Slides de support à la présentation
-                  <span class="badge bg-danger">à venir</span>
+                  <a
+                    href="https://mafritz.ch/slides/fr/ux-techniques-evaluation/"
+                    >Slides de support à la présentation</a
+                  >
                 </li>
               </ul>
               <!-- Activité #3 -->
