--- a/livrables.html
+++ b/livrables.html
@@ -77,7 +77,7 @@
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
         Le contenu de cette page est encore provisoire. Dernière mise à jour
-        22.02.2021 à 11:00
+        25.02.2021 à 17:00
       </p>
       <h1 class="display-3">Livrables</h1>
       <p class="lead mt-3">
@@ -119,7 +119,7 @@
                       >1 <i class="fa fa-chevron-circle-down"></i
                     ></a>
                   </th>
-                  <td>Jeudi 4 mars</td>
+                  <td>Dimanche 7 mars</td>
                   <td class="text-center">21:00</td>
                   <td class="text-center"><i class="fa fa-users"></i></td>
                   <td>
