--- a/livrables.html
+++ b/livrables.html
@@ -126,7 +126,7 @@
                     Première version de la maquette interactive et scénario test
                     utilisateur
                   </td>
-                  <td>Formative. Feu vert pour le test le vendredi 5 mars.</td>
+                  <td>Formative. Feu vert pour le test le lundi 8 mars.</td>
                 </tr>
                 <!-- Première version prototype mobile -->
                 <tr>
